add to admin home

--- a/src/main/resources/templates/admin-index.html
+++ b/src/main/resources/templates/admin-index.html
@@ -11,6 +11,8 @@
     <a href="/upload">UPLOAD A FILE</a>
     <a href="/admin/verify">VERIFY USERS</a>
     <a href="/admin/partner">SHARE FILES</a>
+    <br>
+    <a href="/sys-admin">SYSTEM ADMIN PANEL</a>
 </div>
 </body>
 </html>
