--- a/src/main/resources/templates/admin-partner.html
+++ b/src/main/resources/templates/admin-partner.html
@@ -40,7 +40,7 @@
         function openFiles(evt, route) {
             let div;
             var i, tablinks;
-            var fullRoute = "http://localhost:8080/api/admin/" + route;
+            var fullRoute = `//${window.location.host}/api/admin/` + route;
             tablinks = document.getElementsByClassName("tablinks");
             for (i = 0; i < tablinks.length; i++) {
                 tablinks[i].className = tablinks[i].className.replace(" active", "");
