--- a/src/main/resources/templates/test-page.html
+++ b/src/main/resources/templates/test-page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{/layout/main-layout}">
+      layout:decorate="~{layout/main-layout}">
 
 <head>
     <meta charset="UTF-8">
